# naiive_difurs

./: CMakeLists.txt  README.md  diffur.cpp  main.cpp
